--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
 * {
-    background-color: aquamarine;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container {
+    width: 100vw;
+    height: 100vh;
+
+    display: flex;
+}
+
+.left-pannel {
+    flex: 1 1 auto;
+
+    border: 1px solid black;
+    background-color: chocolate;
+}
+
+.right-pannel {
+    flex: 3 1 auto;
+
+    border: 1px solid black;
+    background-color: brown;
 }
