--- a/css/style.css
+++ b/css/style.css
@@ -8,19 +8,51 @@
     width: 100vw;
     height: 100vh;
 
+    max-width: 100%;
+
     display: flex;
+    flex-wrap: wrap;
 }
 
+
+/*Right side CSS*/
+.right-pannel {
+    flex: 3 1 auto;
+
+    min-width: 66%;
+
+    border: 1px solid black;
+    background-color: brown;
+}
+
+
+/*Left side CSS*/
 .left-pannel {
     flex: 1 1 auto;
+
+    min-width: 33%;
+
+    display: flex;
+    justify-content: center;    
 
     border: 1px solid black;
     background-color: chocolate;
 }
+.logo {
+    background-color: rgba(0, 0, 0, 0.5);
 
-.right-pannel {
-    flex: 3 1 auto;
+    height: 175px;
+    width: 100%;
 
-    border: 1px solid black;
-    background-color: brown;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 33%;
+}
+img {
+    height: 140px;
+    width: auto;
+}
+h1 {
+    color: white;
 }
