--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,9 @@
     display: flex;
     justify-content: center;    
 
-    border: 1px solid black;
-    background-color: chocolate;
+    background-image: url("./../img/left-background.jpg");
+    background-position: center;
+    background-size: auto 100%;
 }
 .logo {
     background-color: rgba(0, 0, 0, 0.5);
