--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+@font-face {
+    font-family: 'odin';
+    src: url(./../fonts/Norse-Bold.otf);
 }
 
 .container {
@@ -56,4 +62,6 @@ img {
 }
 h1 {
     color: white;
+    font-family: 'odin', Arial, Helvetica, sans-serif;
+    font-size: 8rem;
 }
