--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,13 @@
 }
 
 
+
 /*Right side CSS*/
 .right-pannel {
     flex: 3 1 66%;
 
     min-width: 575px;
-    min-height: 70%;
+    min-height: 75%;
 
     position: relative;    
 }
@@ -40,40 +41,51 @@
 }
 .right-pannel-content{
     position: absolute;
-
-    filter: blur(0);
     
     width: 100%;
     height: 60%;
     margin: auto;
     top: 0; left: 0; bottom: 0; right: 0;
+
+    color: white;
 }
 .text-intro {
-    width: 60%;
+    width: 57%;
+    min-width: 575px;
     overflow-wrap: break-word; 
 
-    margin-bottom: 5%;
+    margin-bottom: 60px;
     margin-left: 5%;
 }
 .card {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 15px black;
+
     width: 100%;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.form-title {
+    margin-left: 5%;
+    margin-bottom: 20px;
 }
 .form-size{
-    width: 50%;
-    height: auto;
-
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 32px;
+
+    margin-left: 5%;
 }
 .row{
     display: flex;
-    gap: 12px;
+    gap: 8%;
 }
 .column {
     display: flex;
     flex-direction: column;
+
+    gap: 3px;
 }
 
 
@@ -119,4 +131,14 @@ h1 {
 a {
     color: white;
 
+}
+
+
+/*Form control styles*/
+input{
+    height: 30px;
+    width: 250px;
+    border-radius: 5px;
+    border: 1px solid grey;
+    box-shadow: 2px 2px 5px black;
 }
