Fixed scroll when full screen

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@
 .container {
     width: 100vw;
     height: 100vh;
+    max-height: 100%;
+    max-width: 100%;
 
     min-height: 700px;
     min-width: 575px;
