--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,15 @@
 
     gap: 3px;
 }
+.photo-credit-right{
+    position: absolute;
+    bottom: 0;
+    left: 37%;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    padding: 5px 5px 0 5px;
+}
 
 
 /*Left side CSS*/
@@ -137,7 +146,6 @@ h1 {
 }
 a {
     color: white;
-
 }
 
 
@@ -155,5 +163,9 @@ input{
 }
 input:focus-visible {
     border: 2px solid rgb(89, 160, 218);
+    box-shadow: 2px 2px 10px black;
+}
+input[type="password"]:focus-visible:invalid {
+    border: 2px solid red;
     box-shadow: 2px 2px 10px black;
 }
