--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,11 @@ button {
     color: white;
     border: 1px solid #E5E7EB;
 }
+button:hover {
+    box-shadow: 2px 2px 10px black;
+    background-color: rgb(104, 187, 255);
+    cursor: pointer;
+}
 .sign-in {
     margin-top: 10px;
 }
