Added active password match check

--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,9 @@
     font-size: 12px;
     margin-bottom: 20px;
 }
+.small.no-match {
+    color: red;
+}
 .form-size{
     display: flex;
     flex-direction: column;
